--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "cross-env NODE_ENV=production node index.js",
+		"start": "node ./index.js",
 		"start:dev": "cross-env NODE_ENV=development nodemon index.js"
 	},
 	"keywords": [],
